--- a/.github/workflows/e2e-test.yml
+++ b/.github/workflows/e2e-test.yml
@@ -2,16 +2,86 @@ name: E2E test
 
 on:
   workflow_dispatch:
+    inputs:
+      cases:
+        description: 'specific cases to be excuted. Sample: ["./aad/a.tests.ts", "./bot/b.tests.ts"]. Set empty to run all cases'
+        required: false
   schedule:
     - cron: "0 5 * * *"
+  pull_request:
+    branches:
+      - main
+      - dev
+      - hotfix/**/*
+    types:
+      - assigned
+      - opened
+      - synchronize
+      - reopened
+      - edited
 
 jobs:
-  setup:
+  check-pr:
+    if: ${{  github.event_name == 'pull_request' }}
     runs-on: ubuntu-latest
+    steps:
+      - name: Setup node
+        uses: actions/setup-node@v2.1.2
+        with:
+          node-version: 14
+
+      - name: Install parser cli
+        run: |
+          npm install --global conventional-commits-parser
+
+      - name: Check PR
+        id: check_title
+        run: |
+          declare -a types=("fix" "feat" "refactor")
+          type=`echo "${{ github.event.pull_request.title }}" |  conventional-commits-parser | jq -r '.[].type'`
+          if [[ " ${types[*]} " =~ " ${type} " ]]; then
+            if [[ "${{ github.event.pull_request.body }}" == *"E2E TEST:"* ]]; then
+              echo "::set-output name=passed::true"
+            else
+              echo "::set-output name=passed::false"
+            fi
+          else
+            echo "::set-output name=passed::true"
+          fi
+
+      - name: Search comment
+        if: ${{ steps.check_title.outputs.passed == 'false' }}
+        uses: peter-evans/find-comment@v1
+        id: comments
+        with:
+          issue-number: ${{ github.event.pull_request.number }}
+          body-includes: "E2E TEST:"
+
+      - name: Check if test is included in comments
+        if: ${{ steps.check_title.outputs.passed == 'false' }}
+        run: |
+          if [ -z "${{ steps.comments.outputs.comment-id }}" ]; then
+            echo "E2E TEST not found."
+            exit 1
+          fi
+
+  setup:
+    if: ${{  github.event_name != 'pull_request' }}
+    runs-on: ubuntu-latest
+    outputs:
+      cases: ${{ steps.schedule-cases.outputs.cases || steps.dispatch-cases.outputs.cases || steps.pr-cases.outputs.cases }}
     env:
-      SDK_INTEGRATION_TEST_SQL: ${{ secrets.SDK_INTEGRATION_TEST_SQL }}
-      SDK_INTEGRATION_TEST_ACCOUNT: ${{ secrets.SDK_INTEGRATION_TEST_ACCOUNT }}
-      SDK_INTEGRATION_TEST_AAD: ${{ secrets.SDK_INTEGRATION_TEST_AAD }}
+      AZURE_ACCOUNT_NAME: ${{ secrets.TEST_USER_NAME }}
+      AZURE_ACCOUNT_OBJECT_ID: ${{ secrets.TEST_USER_OBJECT_ID }}
+      AZURE_ACCOUNT_PASSWORD: ${{ secrets.TEST_USER_PASSWORD }}
+      AZURE_SUBSCRIPTION_ID: ${{ secrets.TEST_SUBSCRIPTION_ID }}
+      AZURE_TENANT_ID: ${{ secrets.TEST_TENANT_ID }}
+      M365_ACCOUNT_NAME: ${{ secrets.TEST_USER_NAME }}
+      M365_ACCOUNT_PASSWORD: ${{ secrets.TEST_USER_PASSWORD }}
+      M365_TENANT_ID: ${{ secrets.TEST_TENANT_ID_2 }}
+      CI_ENABLED: "true"
+      M365_ACCOUNT_COLLABORATOR: ${{ secrets.TEST_COLLABORATOR_USER_NAME }}
+      AZURE_DEVOPS_EXT_PAT: ${{ secrets.ADO_PAT }}
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -30,86 +100,218 @@ jobs:
           command: |
             npm run setup
 
-      - name: setup python
-        uses: actions/setup-python@v3
-
-      - name: install xq
+      - name: List cases for schedule
+        id: schedule-cases
+        if: ${{  github.event_name == 'schedule' }}
+        working-directory: packages/cli/tests/e2e
         run: |
-          pip install yq
+          cases=`find . -wholename "*.tests.ts" | jq -Rsc '[split("\n") | .[]| select(.!="")]'`
+          echo "::set-output name=cases::$cases"
 
-      - name: run test - node
+      - name: List cases for dispatch
+        id: dispatch-cases
+        if: ${{  github.event_name == 'workflow_dispatch' }}
+        working-directory: packages/cli/tests/e2e
+        run: |
+          inputCases='${{ github.event.inputs.cases }}'
+          if [ -z "$inputCases" ]; then
+            allCases=`find . -wholename "*.tests.ts" | jq -Rsc '[split("\n") | .[]| select(.!="")]'`
+            echo "::set-output name=cases::$allCases"
+          else
+            echo "::set-output name=cases::$inputCases"
+          fi
+
+      - name: E2E Test clean
+        working-directory: packages/cli
+        run: |
+          npm run test:e2e:clean
+
+      - name: Create new test plan
+        if: ${{ github.ref_name == 'main' && github.event_name != 'pull_request' }}
+        run: |
+          version=$(node -p -e "require('./packages/cli/package.json').version")
+          npx ts-node .github/scripts/testPlan.ts new cli $version
+
+  execute-case:
+    if: ${{ needs.setup.outputs.cases }}
+    env:
+      AZURE_ACCOUNT_NAME: ${{ secrets.TEST_USER_NAME }}
+      AZURE_ACCOUNT_OBJECT_ID: ${{ secrets.TEST_USER_OBJECT_ID }}
+      AZURE_ACCOUNT_PASSWORD: ${{ secrets.TEST_USER_PASSWORD }}
+      AZURE_SUBSCRIPTION_ID: ${{ secrets.TEST_SUBSCRIPTION_ID }}
+      AZURE_TENANT_ID: ${{ secrets.TEST_TENANT_ID }}
+      M365_ACCOUNT_NAME: ${{ secrets.TEST_USER_NAME }}
+      M365_ACCOUNT_PASSWORD: ${{ secrets.TEST_USER_PASSWORD }}
+      M365_TENANT_ID: ${{ secrets.TEST_TENANT_ID_2 }}
+      CI_ENABLED: "true"
+      M365_ACCOUNT_COLLABORATOR: ${{ secrets.TEST_COLLABORATOR_USER_NAME }}
+      AZURE_DEVOPS_EXT_PAT: ${{ secrets.ADO_PAT }}
+    needs: setup
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        cases: ${{ fromJson(needs.setup.outputs.cases) }}
+    name: ${{ matrix.cases }}
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Setup node
+        uses: actions/setup-node@v2.1.2
+        with:
+          node-version: 14
+
+      - name: Download Simple Auth bits
+        uses: nick-invision/retry@v2
+        with:
+          timeout_minutes: 10
+          max_attempts: 10
+          retry_on: error
+          shell: pwsh
+          command: |
+            ./.github/scripts/download-simpleauth.sh
+
+      - name: Setup project
+        uses: nick-invision/retry@v2
+        with:
+          timeout_minutes: 10
+          max_attempts: 10
+          retry_on: error
+          command: |
+            npm run setup
+
+      - name: Package CLI and install
+        working-directory: packages/cli
+        run: |
+          rm -f *.tgz
+          npm pack
+          mv *.tgz teamsfx-cli.tgz
+          npm install -g teamsfx-cli.tgz
+
+      - name: print system info
+        run: |
+          lscpu
+
+      - name: run test
+        working-directory: packages/cli/tests/e2e
+        run: |
+          file=`find . -wholename "${{ matrix.cases }}"`
+          if [ ! -z "$file" ]; then
+            npx mocha --reporter mochawesome --timeout 900000 $file
+          fi
+
+      - name: get report name
+        id: get-report-name
         if: ${{ always() }}
-        working-directory: packages/sdk
         run: |
-          npm run test:e2e:node
+          name="${{ matrix.cases }}"
+          name="${name//'.tests.ts'/}"
+          name="${name//.\//}"
+          name="${name//\//_}"
+          echo "::set-output name=name::$name"
+
+      - name: Upload test report
+        uses: actions/upload-artifact@v2
+        if: failure()
+        with:
+          name: ${{ steps.get-report-name.outputs.name }}.json
+          path: |
+            ./packages/cli/tests/e2e/mochawesome-report/mochawesome.json
+
+      - name: Sync to Azure DevOps Test Plan
+        if: ${{ always() && (github.event_name == 'schedule' || github.event_name == 'workflow_dispatch') }}
+        run: |
+          version=$(node -p -e "require('./packages/cli/package.json').version")
+          npx ts-node .github/scripts/testPlan.ts sync ./packages/cli/tests/e2e/mochawesome-report/mochawesome.json cli $version
+
+  report:
+    if: ${{ always() && github.event_name == 'schedule' }}
+    needs: execute-case
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Install Dateutils
+        run: |
+          sudo apt install dateutils
 
       - name: List jobs
-        if: ${{ always() }}
         id: list-jobs
-        working-directory: packages/sdk
+        working-directory: packages/cli
         run: |
+          result=`curl \
+            -u :${{ secrets.GITHUB_TOKEN }}\
+            https://api.github.com/repos/OfficeDev/TeamsFx/actions/runs/${{ github.run_id }}/attempts/${{ github.run_attempt }}/jobs?per_page=100`
+
+
+          cases=`echo $result | jq -r '.jobs[] | select(.name | contains("tests.ts")) | .name'`
+
           lists=""
+          passed=0
+          failed=0
 
-          total_node=`cat test-results.node.xml | xq '.testsuite| ."@tests"' | sed -e 's/"//g'`
-          #total_browser=`cat test-results.browser.xml | xq '.testsuite| ."@tests"' | sed -e 's/"//g'`
-          #total=$((total_node+total_browser))
-          total=$total_node
-
-          error_node=`cat test-results.node.xml | xq '.testsuite| ."@errors"' | sed -e 's/"//g'`
-          #error_browser=`cat test-results.browser.xml | xq '.testsuite| ."@errors"' | sed -e 's/"//g'`
-          #failed=$((error_node+error_browser))
-          failed=error_node
-
-          passed=$((total-failed))
-
-          emails="haolong@microsoft.com"
-
-          case_node=`cat test-results.node.xml | xq '.testsuite | .testcase'`
-          #case_browser=`cat test-results.browser.xml | xq '.testsuite | .testcase'`
-
-          #for case in $(jq --slurp 'add' <(echo "$case_node ") <(echo "$case_browser") | jq -r '.[] | @base64'); do
-          for case in $(echo "$case_node" | jq -r '.[] | @base64'); do
-            _jq() {
-                echo "${case}" | base64 --decode | jq -r "${1}"
-            }
-
+          emails="vsciotadt@microsoft.com"
+          while IFS= read -r case;
+          do
             if [ -z "$case" ]; then
               continue
             fi
 
-            suite=$(_jq '."@classname"')
-            name=$(_jq '."@name"')
-            duration=$(_jq '."@time"')
-            failure=$(_jq '.failure')
-            email="ning.tang@microsoft.com"
+            file="tests/e2e/$case"
+            elegant_path="${file//.\//}"
 
-            author="<a href=\\\"mailto:$email\\\"><span>$email</span></a>"
-
-            label=""
-            if [ "$failure" == "null" ]; then
-              label="<span style=\\\"background-color:#2aa198;color:white;font-weight:bold;\\\">PASSED</span>"
-            else
-              label="<span style=\\\"background-color:#dc322f;color:white;font-weight:bold;\\\">FAILED</span>"
+            email=""
+            if grep -q "@author" $file; then
+              email=`grep '@author' $file | grep -i -o '[A-Z0-9._%+-]\+@[A-Z0-9.-]\+\.[A-Z]\{2,4\}'`
             fi
 
-            if [[ ! -z "$email" && ! "$emails" == *"$email"* && "$failure" ]]; then
+            status=`echo $result | jq --arg case $case -r '.jobs[] | select(.name == $case ) | .conclusion'`
+
+            if [[ ! -z "$email" && ! "$emails" == *"$email"* && "$status" == "failure" ]]; then
               emails="$emails;$email"
             fi
 
-            row="<tr> <td style=\\\"text-align: left;\\\">$suite</td> <td style=\\\"text-align: left;\\\">$name</td> <td style=\\\"text-align: center;\\\">$label</td> <td style=\\\"text-align: center;\\\">$author</td> <td>$duration sec</td> </tr>"
+            started_at=`echo $result | jq --arg case $case -r '.jobs[] | select(.name == $case ) | .started_at'`
+            completed_at=`echo $result | jq --arg case $case -r '.jobs[] | select(.name == $case ) | .completed_at'`
+            duration=`dateutils.ddiff $started_at $completed_at -f "%Mm %Ss"`
 
-            if [[ -z "$failure" ]]; then
+            author=""
+            if [ -z "$email" ]; then
+              author="N/A"
+            else
+              author="<a href=\\\"mailto:$email\\\"><span>$email</span></a>"
+            fi
+
+            lable=""
+            if [ "$status" == "success" ]; then
+              passed=$((passed+1))
+              label="<span style=\\\"background-color:#2aa198;color:white;font-weight:bold;\\\">PASSED</span>"
+            else
+              failed=$((failed+1))
+              label="<span style=\\\"background-color: #dc322f;color:white;font-weight:bold;\\\">FAILED</span>"
+            fi
+
+            url=`echo $result | jq --arg case $case -r '.jobs[] | select(.name == $case ) | .html_url'`
+            url="<a href=\\\"$url\\\">For Detail</a>"
+
+            row="<tr> <td style=\\\"text-align: left;\\\">$elegant_path</td> <td style=\\\"text-align: center;\\\">$label</td> <td style=\\\"text-align: center;\\\">$author</td> <td>$duration</td> <td>$url</td> </tr>"
+
+            if [ "$status" == "success" ]; then
               lists="$lists $row"
             else
               lists="$row $lists"
             fi
 
-          done
+          done <<< $cases
 
+          body="<table class=\\\"w3-table w3-striped w3-bordered\\\"> <tr> <th>Case</th> <th>Status</th> <th>Author</th> <th>Duration</th> <th>URL</th> </tr> $lists </table> <br /> The detail can be found here: <a> https://github.com/OfficeDev/TeamsFx/actions/runs/${{ github.run_id }} </a>"
 
-          body="<table class=\\\"w3-table w3-striped w3-bordered\\\"> <tr>  <th>Suite</th> <th>Case</th> <th>Status</th> <th>Author</th> <th>Duration</th> </tr> $lists </table> <br /> The detail can be found here: <a> https://github.com/OfficeDev/TeamsFx/actions/runs/${{ github.run_id }}</a>"
+          total=$((passed+failed))
 
-          subject="SDK E2E Test Report ($passed/$total Passed)"
+          subject="TeamsFx E2E Test Report ($passed/$total Passed)"
           if [ $failed -gt 0 ]; then
             subject="[FAILED] $subject"
           else
@@ -120,9 +322,8 @@ jobs:
           echo "::set-output name=to::$emails"
           echo "::set-output name=subject::$subject"
 
-      - name: Report result
+      - name: Send E-mail to the whole team
         uses: satak/webrequest-action@master
-        if: ${{ always() }}
         with:
           url: https://prod-30.eastus.logic.azure.com:443/workflows/9aa865da96054bd89749c2d4ce68df8e/triggers/manual/paths/invoke?api-version=2016-10-01&sp=%2Ftriggers%2Fmanual%2Frun&sv=1.0&sig=uIoB06NUHSnKoZeWjNDI9t4rrhbTBKxJNiBtDoMRSQs
           method: POST
