--- a/packages/cli/.vscode/launch.json
+++ b/packages/cli/.vscode/launch.json
@@ -29,7 +29,7 @@
       "name": "Launch provision command (non-interactive)",
       "skipFiles": ["<node_internals>/**"],
       "program": "${workspaceFolder}/cli.js",
-      "args": ["provision", "--folder", "C:/Users/wenyutang.FAREAST/TeamsApps/wenytest040601"],
+      "args": ["add", "api-connection", "--folder", "C:/Users/wenyutang.FAREAST/TeamsApps/wenytest040601"],
       "outFiles": [
         "${workspaceFolder}/lib/**/*.js",
         "${workspaceFolder}/../fx-core/build/**/*.js",
