--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -18,7 +18,7 @@
     "package": "rimraf lib && node --max-old-space-size=4096 node_modules/webpack/bin/webpack.js --mode production --config ./webpack.config.js",
     "prepack": "npm run package",
     "test:e2e": "npm run test:e2e:clean && npm run test:e2e:parallel",
-    "test:e2e:clean": "ts-node tests/e2e/clean.ts",
+    "test:e2e:clean": "NODE_OPTIONS=\"--unhandled-rejections=strict\" ts-node tests/e2e/clean.ts",
     "test:e2e:parallel": "mocha --parallel --reporter @mochajs/json-file-reporter \"tests/e2e/**/*.tests.ts\"",
     "test:e2e:smoke": "mocha --reporter @mochajs/json-file-reporter \"tests/e2e/smoke/*.tests.ts\"",
     "test:e2e:others": "mocha --reporter @mochajs/json-file-reporter \"tests/e2e/{,!(smoke)}/*.tests.ts\"",
