--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -99,6 +99,7 @@
     "openapi-types": "^7.2.3",
     "proper-lockfile": "^4.1.2",
     "read-package-json-fast": "^2.0.3",
+    "readline-sync": "^1.4.10",
     "reflect-metadata": "^0.1.13",
     "semver": "^7.3.4",
     "tedious": "^14.3.0",
@@ -139,6 +140,7 @@
     "@types/node": "^14.14.21",
     "@types/node-forge": "^0.9.7",
     "@types/proxyquire": "^1.3.28",
+    "@types/readline-sync": "^1.4.4",
     "@types/rewire": "^2.5.28",
     "@types/semver": "^7.3.4",
     "@types/sinon": "^9.0.10",
