--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       preid:
-        description: "preid name(beta, rc, stable)"
+        description: "preid name(alpha, beta, rc, stable)"
         required: true
         default: "rc"
       skip-version-rc:
@@ -24,27 +24,33 @@ jobs:
 
     steps:
       - name: Validate CD branch
-        if: ${{ github.event_name == 'workflow_dispatch' && github.ref != 'refs/heads/main' && !startsWith(github.ref, 'refs/heads/hotfix/') && github.ref != 'refs/heads/ga' }}
+        if: ${{ github.event_name == 'workflow_dispatch' && github.ref != 'refs/heads/main' && !startsWith(github.ref, 'refs/heads/hotfix/') && github.ref != 'refs/heads/dev' && github.ref != 'refs/heads/ga' }}
         run: |
-          echo It's not allowed to run CD on other branch except main and ga.
+          echo It's not allowed to run CD on other branch except main, dev and ga.
           exit 1
 
       - name: Validate inputs for main or hotfix
         if: ${{ github.event_name == 'workflow_dispatch' && (github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/heads/hotfix/')) && github.event.inputs.preid != 'rc' && github.event.inputs.preid != 'stable' }}
         run: |
-          echo It's not allowed to release beta on main branch.
+          echo It's only allowed to release RC and stable on main branch.
           exit 1
 
-      - name: Valiadte inputs for ga
+      - name: Valiadte inputs for dev
+        if: ${{ github.event_name == 'workflow_dispatch' && github.ref == 'refs/heads/dev' && github.event.inputs.preid != 'alpha' }}
+        run: |
+          echo It's only allowed to alpha on dev branch.
+          exit 1
+      
+      - name: Validate inputs for ga
         if: ${{ github.event_name == 'workflow_dispatch' && github.ref == 'refs/heads/ga' && github.event.inputs.preid != 'beta' }}
         run: |
-          echo It's not allowed to release RC or stable on ga branch.
+          echo It's only allowed to release beta on ga branch.
           exit 1
 
       - name: Validate schedule
-        if: ${{ github.event_name == 'schedule' && github.ref != 'refs/heads/ga' }}
+        if: ${{ github.event_name == 'schedule' && (github.ref != 'refs/heads/dev' || github.ref != 'refs/heads/ga') }}
         run: |
-          echo It's not allowed to run schedule release except ga branch.
+          echo It's not allowed to run schedule release except dev or ga branch.
           exit 1
 
       - name: Checkout branch
@@ -82,8 +88,13 @@ jobs:
           git config --global user.name 'MSFT-yiz'
           git config --global user.email 'yiz@microsoft.com'
 
+      - name: release alpha npm packages to npmjs.org
+        if: ${{ github.event_name == 'schedule' || (github.event_name == 'workflow_dispatch' && github.ref == 'refs/heads/dev' && github.event.inputs.preid == 'alpha')}}
+        run: |
+          npx lerna version prerelease --preid=alpha.$(git rev-parse --short HEAD) --exact --no-push --allow-branch dev --yes
+      
       - name: release beta npm packages to npmjs.org
-        if: ${{ github.event_name == 'schedule' || (github.event_name == 'workflow_dispatch' && github.ref == 'refs/heads/ga' && github.event.inputs.preid == 'beta')}}
+        if: ${{github.event_name == 'schedule' || (github.event_name == 'workflow_dispatch' && github.ref == 'refs/heads/ga' && github.event.inputs.preid == 'beta')}}
         run: |
           npx lerna version prerelease --preid=beta.$(git rev-parse --short HEAD) --exact --no-push --allow-branch ga --yes
 
@@ -128,7 +139,15 @@ jobs:
         run: |
           .github/scripts/template-zip-autogen.sh ${{ runner.temp }}/teamsfx_templates
 
-      - name: update tag
+      - name: update tempaltes alpha tag
+        uses: richardsimko/update-tag@v1
+        if: ${{ contains(steps.version-change.outputs.CHANGED, 'templates@') && (github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' && github.event.inputs.preid == 'alpha') }}
+        with:
+          tag_name: "templates-0.0.0-alpha"
+        env:
+          GITHUB_TOKEN: ${{ secrets.CD_PAT }}
+
+      - name: update tempaltes beta tag
         uses: richardsimko/update-tag@v1
         if: ${{ contains(steps.version-change.outputs.CHANGED, 'templates@') && (github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' && github.event.inputs.preid == 'beta') }}
         with:
@@ -136,6 +155,16 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.CD_PAT }}
 
+      - name: release templates' alpha version to github
+        if: ${{ contains(steps.version-change.outputs.CHANGED, 'templates@') && (github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' && github.event.inputs.preid == 'alpha') }}
+        uses: ncipollo/release-action@v1.7.3
+        with:
+          token: ${{ secrets.CD_PAT }}
+          prerelease: true
+          tag: "templates-0.0.0-alpha"
+          artifacts: ${{ runner.temp }}/teamsfx_templates/*.zip
+          allowUpdates: true
+      
       - name: release templates' beta version to github
         if: ${{ contains(steps.version-change.outputs.CHANGED, 'templates@') && (github.event_name == 'schedule' || github.event_name == 'workflow_dispatch' && github.event.inputs.preid == 'beta') }}
         uses: ncipollo/release-action@v1.7.3
@@ -146,7 +175,7 @@ jobs:
           artifacts: ${{ runner.temp }}/teamsfx_templates/*.zip
           allowUpdates: true
 
-      - name: update tag
+      - name: update template rc tag
         uses: richardsimko/update-tag@v1
         if: ${{ (contains(steps.version-change.outputs.CHANGED, 'templates@') || contains(steps.version-change.outputs.CHANGED, '@microsoft/teamsfx')) && github.event_name == 'workflow_dispatch' && github.event.inputs.preid == 'rc' }}
         with:
@@ -198,10 +227,15 @@ jobs:
           command: |
             bash ./.github/scripts/download-simpleauth.sh
 
+      - name: publish alpha release to npm org
+        if: ${{ github.event_name == 'schedule' || (github.event_name == 'workflow_dispatch' && github.ref == 'refs/heads/dev' && github.event.inputs.preid == 'alpha')}}
+        run: |
+          npx lerna publish from-package --dist-tag=alpha --yes --allow-branch dev
+      
       - name: publish beta release to npm org
         if: ${{ github.event_name == 'schedule' || (github.event_name == 'workflow_dispatch' && github.ref == 'refs/heads/ga' && github.event.inputs.preid == 'beta')}}
         run: |
-          npx lerna publish from-package --dist-tag=beta --yes --allow-branch ga
+          npx lerna publish from-package --dist-tag=beta --yes --allow-branch dev
 
       - name: update cli ai key
         if: ${{ github.event_name == 'workflow_dispatch' && (github.event.inputs.preid == 'stable'||github.event.inputs.preid == 'rc') }}
@@ -247,8 +281,8 @@ jobs:
             cd ./packages/server
             npm run package
 
-      - name: release daily server bits to github
-        if: ${{ contains(steps.version-change.outputs.CHANGED, '@microsoft/teamsfx-server') && github.ref == 'refs/heads/ga'  }}
+      - name: release alpha, beta server bits to github
+        if: ${{ contains(steps.version-change.outputs.CHANGED, '@microsoft/teamsfx-server') && (github.ref == 'refs/heads/dev' || github.ref == 'refs/heads/ga')  }}
         uses: ncipollo/release-action@v1.7.3
         with:
           token: ${{ secrets.CD_PAT }}
@@ -286,8 +320,8 @@ jobs:
             npm install --only=production
             npx vsce package
 
-      - name: release daily VSCode extension to github
-        if: ${{ contains(steps.version-change.outputs.CHANGED, 'ms-teams-vscode-extension@') && github.ref == 'refs/heads/ga'  }}
+      - name: release alpha and beta VSCode extension to github
+        if: ${{ contains(steps.version-change.outputs.CHANGED, 'ms-teams-vscode-extension@') && (github.ref == 'refs/heads/dev' || github.ref == 'refs/heads/ga') }}
         uses: ncipollo/release-action@v1.7.3
         with:
           token: ${{ secrets.CD_PAT }}
