--- a/packages/fx-core/src/common/samples-config.json
+++ b/packages/fx-core/src/common/samples-config.json
@@ -80,9 +80,9 @@
         {
             "id": "share-now",
             "title": "Share Now",
-            "shortDescription": "Knowledge sharing app contains a Tab and a Messaging extension",
+            "shortDescription": "Knowledge sharing app contains a Tab and a Message extension",
             "fullDescription": "Share Now promotes the exchange of information between colleagues by enabling users to share content within the Teams environment. Users engage the app to share items of interest, discover new shared content, set preferences, and bookmark favorites for later reading.",
-            "tags": ["Tab", "Messaging extension", "TS"],
+            "tags": ["Tab", "Message extension", "TS"],
             "time": "30min to run",
             "configuration": "Ready for local debug",
             "suggested": false
@@ -121,8 +121,8 @@
             "id": "NPM-search-connector-M365",
             "title": "NPM Search Connector",
             "shortDescription": "Search and Share an NPM Package in Teams and Outlook (Web)",
-            "fullDescription": "NPM Search Connector is a Messaging Extension that runs across M365 including Teams and Outlook (Web). It allows you to perform a quick search for a NPM package and insert package details into conversations for easy sharing. The front end is built with Adaptive Cards and the backend is an Azure Bot Service.",
-            "tags": ["Messaging extension", "JS", "Outlook"],
+            "fullDescription": "NPM Search Connector is a Message Extension that runs across M365 including Teams and Outlook (Web). It allows you to perform a quick search for a NPM package and insert package details into conversations for easy sharing. The front end is built with Adaptive Cards and the backend is an Azure Bot Service.",
+            "tags": ["Message extension", "JS", "Outlook"],
             "time": "45min to run",
             "configuration": "Manual configurations required",
             "suggested": false
