--- a/templates/bot/ts/command-and-response/package.json
+++ b/templates/bot/ts/command-and-response/package.json
@@ -8,7 +8,7 @@
     "scripts": {
         "dev:teamsfx": "env-cmd --silent -f .env.teamsfx.local npm run dev",
         "dev": "nodemon --watch ./src --exec node --inspect=9239 --signal SIGINT -r ts-node/register ./src/index.ts",
-        "build": "tsc --build",
+        "build": "tsc --build && shx cp -r ./src/adaptiveCards ./lib/src",
         "start": "node ./lib/src/index.js",
         "watch": "nodemon --watch ./src --exec \"npm run start\"",
         "test": "echo \"Error: no test specified\" && exit 1"
@@ -27,6 +27,7 @@
         "env-cmd": "^10.1.0",
         "nodemon": "^2.0.7",
         "ts-node": "~9.1.1",
-        "typescript": "~3.9.2"
+        "typescript": "~3.9.2",
+        "shx": "^0.3.4"
     }
 }
