--- a/templates/bot/ts/notification-function-base/package.json
+++ b/templates/bot/ts/notification-function-base/package.json
@@ -9,7 +9,7 @@
         "dev": "func start --typescript --language-worker=\"--inspect=9239\" --port \"3978\" --cors \"*\"",
         "prepare-storage:teamsfx": "azurite --silent --location ./_storage_emulator --debug ./_storage_emulator/debug.log",
         "watch:teamsfx": "tsc --watch",
-        "build": "tsc",
+        "build": "tsc && shx cp -r ./src/adaptiveCards ./dist",
         "watch": "tsc -w",
         "prestart": "npm run build",
         "start": "npx func start",
@@ -29,6 +29,7 @@
         "azurite": "^3.16.0",
         "env-cmd": "^10.1.0",
         "ts-node": "~9.1.1",
-        "typescript": "~3.9.2"
+        "typescript": "~3.9.2",
+        "shx": "^0.3.4"
     }
 }
