--- a/packages/fx-core/package.json
+++ b/packages/fx-core/package.json
@@ -71,6 +71,9 @@
     "@npmcli/arborist": "^4.2.0",
     "@types/jwt-decode": "3.1.0",
     "@types/proper-lockfile": "^4.1.1",
+    "@vs/tunnels-connections": "^1.0.7240",
+    "@vs/tunnels-contracts": "^1.0.7240",
+    "@vs/tunnels-management": "^1.0.7240",
     "adm-zip": "^0.5.5",
     "ajv": "^8.5.0",
     "ajv-draft-04": "^1.0.0",
