--- a/packages/sdk-react/package.json
+++ b/packages/sdk-react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/teamsfx-react",
-  "version": "0.1.2",
+  "version": "1.0.0-rc",
   "description": "React helper functions for Microsoft TeamsFx",
   "main": "build/index.js",
   "types": "build/index.d.ts",
