--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -121,6 +121,8 @@
 /packages/function-extension @adashen @blackchoey @dilin-MS
 
 /packages/dotnet-sdk @tecton  @JerryYangKai
+/packages/dotnet-sdk/src/TeamsFx/Conversation @swatDong @dooriya @kimizhu
+/packages/dotnet-sdk/src/TeamsFx.Test/Conversation @swatDong @dooriya @kimizhu
 
 /.github/workflows/cd.yml @adashen @LongOddCode @IvanJobs @qinezh @wenytang-ms
 
