--- a/packages/sdk-react/package.json
+++ b/packages/sdk-react/package.json
@@ -30,7 +30,7 @@
     "@istanbuljs/nyc-config-typescript": "^1.0.2",
     "@microsoft/microsoft-graph-client": "^3.0.1",
     "@microsoft/teams-js": "^1.9.0",
-    "@microsoft/teamsfx": "^0.7.0",
+    "@microsoft/teamsfx": "^1.0.0-rc",
     "@testing-library/react-hooks": "^7.0.2",
     "@types/chai": "^4.3.0",
     "@types/mocha": "^9.1.0",
