--- a/packages/fx-core/templates/plugins/resource/apiconnector/sample/headerComment.template
+++ b/packages/fx-core/templates/plugins/resource/apiconnector/sample/headerComment.template
@@ -20,15 +20,19 @@ Your next steps:
 2. Refer sample code and comments in this file to implement your auth provider.
 {{/if}}
 
-You can now import the API client (an Axios instance) in another file and call test APIs without worrying about authentication.
+You can now import the API client (an Axios instance) in another file and call {{config.APIName}} APIs without worrying about authentication.
 Here is an example for a GET request to "relative_path_of_target_api":
 ```
-const { testClient } = require("{relative_path_to_this_file}");
+{{#if (equals languageExt "js")}}
+const { {{config.APIName}}Client } = require("relative_path_to_this_file");
+{{else}}
+import { {{config.APIName}}Client } from "relative_path_to_this_file";
+{{/if}}
 
-const response = await testClient.get("relative_path_of_target_api");
+const response = await {{config.APIName}}Client.get("relative_path_of_target_api");
 // You only need to enter the relative path for your API.
 // For example, if you want to call api https://my-api-endpoint/test, and inputted https://my-api-endpoint as API endpoint,
-// the code will looks like: const response = await testClient.get("test");
+// the code will looks like: const response = await {{config.APIName}}Client.get("test");
 
 const responseBody = response.data;
 ```
